[package]
name = "neolove"
version = "0.1.0"
edition = "2024"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mlua = { version = "0.11.5", features = ["luau"] }
hound = "3.5.1"
rapier2d = "0.23"
bytemuck = { version = "1.16.1", features = ["derive"] }
fontdue = "0.9.3"
image = "0.24.9"
rodio = "0.20.1"
vulkano = "0.34.1"
vulkano-shaders = "0.34.0"
winit = "0.28.7"
rustls = "0.23.18"
webpki-roots = "0.26.7"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
