[package]
name = "neolove"
version = "0.1.0"
edition = "2024"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mlua = { version = "0.11.5", features = ["luau"] }
hound = "3.5.1"
rapier2d = "0.23"
bytemuck = { version = "1.16.1", features = ["derive"] }
fontdue = "0.9.3"
image = "0.24.9"
rodio = "0.20.1"
vulkano = "0.34.1"
vulkano-shaders = "0.34.0"
winit = "0.28.7"
rustls = "0.23.18"
webpki-roots = "0.26.7"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
rmp-serde = "1.3.1"
ring = "0.17.14"
rustls-pemfile = "1.0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.22.0", features = ["v4", "v7"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "emscripten"))'.dependencies]
mlua = { version = "0.11.5", features = ["luau"] }
hound = "3.5.1"
rapier2d = "0.23"
bytemuck = { version = "1.16.1", features = ["derive"] }
fontdue = "0.9.3"
image = "0.24.9"

[build-dependencies]
cc = "1.2.43"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
